feat(chat): PalmReading 模型 + R2图片上传 + 流式回复与loading修复

--- a/env.example
+++ b/env.example
@@ -200,6 +200,13 @@ REPLICATE_API_TOKEN=""
 GOOGLE_GENERATIVE_AI_API_KEY=""
 DEEPSEEK_API_KEY=""
 OPENROUTER_API_KEY=""
+# -----------------------------------------------------------------------------
+# Coze API (for PalmReading model)
+# https://www.coze.cn/
+# -----------------------------------------------------------------------------
+COZE_API_KEY=""
+COZE_WORKFLOW_ID=""
+COZE_USER_NAME=""
 
 # -----------------------------------------------------------------------------
 # Web Content Analyzer (Firecrawl)
