feat: 娣诲姞Palm Reading椤甸潰鍜岄椤甸噸鏋? - 鍒涘缓鏂扮殑Palm Reading椤甸潰锛堢被浼紁almist.io椋庢牸锛?- 灏嗛椤垫敼涓篜alm Reading椤甸潰 - 绉婚櫎瀵艰埅鏍忎腑鐨凙I Tools鍜孌ocs鑿滃崟 - 淇敼API鏀寔浠庣幆澧冨彉閲忚鍙杋nput鍜寀ser_name - 鏇存柊缃戠珯鏍囬鍜屽搧鐗屼负PalmReading - 浼樺寲椤甸潰鏍峰紡鍜岄厤鑹叉柟妗?- 鏀寔鏁翠釜涓婁紶鍖哄煙鐐瑰嚮涓婁紶鍥剧墖

--- a/env.example
+++ b/env.example
@@ -207,6 +207,8 @@ OPENROUTER_API_KEY=""
 COZE_API_KEY=""
 COZE_WORKFLOW_ID=""
 COZE_USER_NAME=""
+# User input prompt (will be used when only image is uploaded)
+COZE_USER_INPUT="请总结图片内容"
 
 # -----------------------------------------------------------------------------
 # Web Content Analyzer (Firecrawl)
