feat: add markdown support for palm reading results and remove success toast

--- a/package.json
+++ b/package.json
@@ -121,6 +121,7 @@
     "react-day-picker": "9.11.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.62.0",
+    "react-markdown": "^10.1.0",
     "react-remove-scroll": "^2.6.3",
     "react-resizable-panels": "^2.1.7",
     "react-social-media-embed": "^2.5.18",
@@ -128,6 +129,7 @@
     "react-tweet": "^3.2.2",
     "react-use-measure": "^2.1.7",
     "recharts": "^2.15.4",
+    "remark-gfm": "^4.0.1",
     "resend": "^4.4.1",
     "s3mini": "^0.2.0",
     "shiki": "^2.4.2",
